# ducks-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  bot.py  config.py  package.json  pyproject.toml  render.yaml  requirements.txt  tsconfig.json
db/: database.py  repositories.py
handlers/: __init__.py  admin.py  common.py  events.py  feedback.py  rating.py
models/: entities.py
services/: container.py  event_service.py  feedback_service.py  notification_service.py  rating_service.py  user_service.py
src/: app.ts  bot.ts  main.py  server.ts
src/api/: client.py  client.ts  errors.py  events.api.ts  feedback.api.ts  models.py  promo-links.api.ts  ratings.api.ts  users.api.ts
src/bot/: callbacks.py  factory.py  formatters.py  keyboards.py
src/config/: env.ts  settings.py
src/constants/: games.ts  messages.ts
src/handlers/: about.handler.ts  events.handler.ts  events.py  feedback.py  linking.py  ratings.handler.ts  ratings.py  rules.handler.ts  rules.py  start.handler.ts  start.py  support.handler.ts
src/jobs/: eventReminder.job.ts
src/keyboards/: common.keyboard.ts  events.keyboard.ts
src/logging_config/: setup.py
src/middlewares/: auth.middleware.ts  error-handler.ts  internal-token.middleware.ts  validate.ts
src/routes/: internal-notifications.route.ts
src/services/: event-registration-message.service.ts  notification.service.ts
src/state/: feedback.py
src/storage/: user_links.py
src/types/: context.ts
src/utils/: callback.ts  formatters.ts  (+2 more)
tests/: test_api_client.py  test_formatters.py
utils/: logging.py
(+19 files in other folders)
